<resources>
    <string name="app_name">BlogApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="menu_glob_feed">Feed</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_auth">Login / Register</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="read_more">Read More</string>
    <string name="nav_profile_img">nav_profile_img</string>
    <string name="nav_username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="short_bio">Short Bio</string>
    <string name="image_url">Profile Image Url</string>
    <string name="arg_article_id">ARTICLE_ID</string>
    <string name="app_shared_preferences">APP_SHARED_PREFEERENCES</string>
    <string name="prefs_key_token">token</string>
</resources>