<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_glob_feed">

    <fragment
        android:id="@+id/nav_glob_feed"
        android:name="me.darthwithap.blogapp.ui.feed.GlobalFeedFragment"
        android:label="@string/menu_glob_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_my_feed"
        android:name="me.darthwithap.blogapp.ui.feed.MyFeedFragment"
        android:label="@string/menu_my_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_auth"
        android:name="me.darthwithap.blogapp.ui.auth.AuthFragment"
        android:label="@string/menu_auth"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="me.darthwithap.blogapp.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>